test/black-box/v3/4.exp
[Line 1] Syntax error: Unknown error.
[Line 1] Syntax error: Unknown error.