test/black-box/v3/4.toc
Funcao principal
void toc()
  # Codigo da funcao principal